--- a/os.html
+++ b/os.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" data-bs-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de Ordem de Serviço</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <script src="js/jspdf.umd.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
-    <img src="logo_reciclar.png" alt="Logo Reciclar" height="120" style="align: center">
-    <h1 style="text-align: center;">Gerador de OS</h1>
+    <img src="images/logo_reciclar.png" alt="Logo Reciclar" height="120" style="display: block; margin: auto;">
+    <p class="display-4" style="text-align: center;">Gerador de OS</h1>
 </header>
 <body>
     <nav>
@@ -19,11 +20,11 @@
         <form id="formulario">
             <h3>Preencha os campos abaixo para gerar a Ordem de Serviço</h3>
             <label for="nome">Nome do Contato:</label>
-            <input type="text" id="nome" placeholder="Digite seu nome" required>
+            <input type="text" id="nome" placeholder="Digite seu nome" maxlength="80" required>
             <br>
 
             <label for="telefone">Telefone/Whatsapp:</label>
-            <input type="text" id="telefone" placeholder="Digite o número do contato" required>
+            <input type="text" id="telefone" placeholder="Digite o número do contato" maxlength="20" required>
             <br>
 
             <label for="emissao">Data de Emissão:</label>
@@ -35,19 +36,19 @@
             <br>
 
             <label for="quantidade">Quantidade:</label>
-            <input type="text" id="quantidade" placeholder="Descreva a quantidade do pedido" required>
+            <input type="text" id="quantidade" placeholder="Descreva a quantidade do pedido" maxlength="10" required>
             <br>
 
             <label for="acabamento">Acabamento:</label>
-            <input type="text" id="acabamento" placeholder="Descreva o acabamento das peças" required>
+            <input type="text" id="acabamento" placeholder="Descreva o acabamento das peças" maxlength="150" required >
             <br>
 
             <label for="valor">Valor:</label>
-            <input type="text" id="valor" placeholder="Digite o valor do serviço" required>
+            <input type="text" id="valor" placeholder="Digite o valor do serviço" maxlength="15" required>
             <br>
 
             <label for="pagamento">Status do Pagamento:</label>
-            <input type="text" id="pagamento" placeholder="Descreva o status do pagamento" required>
+            <input type="text" id="pagamento" placeholder="Descreva o status do pagamento" maxlength="100" required>
             <br>
 
             <label for="img">Imagem do item:</label>
@@ -65,9 +66,26 @@
             async function carregarLogo(src) {
                 return new Promise((resolve, reject) => {
                     const logo = new Image();
+                    logo.crossOrigin = 'Anonymous'; // Allow cross-origin requests
                     logo.src = src;
-                    logo.onload = () => resolve(logo);
-                    logo.onerror = (err) => reject(err);
+                    logo.onload = () => {
+                        const canvas = document.createElement('canvas');
+                        const ctx = canvas.getContext('2d');
+                        canvas.width = logo.width;
+                        canvas.height = logo.height;
+                        ctx.drawImage(logo, 0, 0);
+                        try {
+                            const dataURL = canvas.toDataURL('image/jpeg');
+                            resolve(dataURL);
+                        } catch (error) {
+                            console.error('Erro ao converter o canvas para dataURL:', error);
+                            reject(new Error('Erro ao converter o canvas para dataURL'));
+                        }
+                    };
+                    logo.onerror = (error) => {
+                        console.error('Erro ao carregar a imagem:', error, 'src:', src);
+                        reject(new Error('Erro ao carregar a imagem'));
+                    };
                 });
             }
 
@@ -106,11 +124,11 @@
                 const pdf = new jsPDF();
 
                 try {
-                    // Carregar o logo
-                    const logo = await carregarLogo("logo.jpg");
+                    // Carregar logo de forma assíncrona
+                    const logo = await carregarLogo("images/logo.jpg");
                     pdf.addImage(logo, 'JPG', 10, 10, 30, 30);
 
-                    // Configuração do PDF
+                    // Adicionar texto ao PDF
                     pdf.setFont("helvetica", "bold");
                     pdf.setFontSize(20);
                     pdf.text("Ordem de Serviço - Fundição Reciclar", 50, 20);
@@ -125,22 +143,56 @@
                     pdf.text(`Acabamento: ${acabamento}`, 10, 65);
                     pdf.text(`Valor: ${valor}`, 10, 70);
                     pdf.text(`Pagamento: ${pagamento}`, 120, 70);
-                    pdf.text("Descrição:", 10, 80);
+                    pdf.text("Descrição:", 10, 80, { maxWidth: 160 });
                     pdf.text(descricao || "Nenhuma descrição fornecida.", 40, 80, { maxWidth: 150 });
 
-                    // Adicionar imagens
+                    // Processar imagens adicionadas pelo usuário
                     if (imgInput.files.length > 0) {
-                        const imagens = await processarImagens(imgInput.files);
-                        imagens.forEach((img) => {
-                            pdf.addImage(img.data, 'JPEG', 10, img.y, 50, 50);
-                        });
+                        let yPosition = 100; // Posição inicial para as imagens
+                        for (const file of imgInput.files) {
+                            const imgData = await carregarImagem(file); // Aguarda o carregamento da imagem
+                            const img = new Image();
+                            img.src = imgData;
+                            await new Promise((resolve) => {
+                                img.onload = () => {
+                                    const maxWidth = pdf.internal.pageSize.getWidth() * 0.5; // 50% da largura do PDF
+                                    const maxHeight = pdf.internal.pageSize.getHeight() * 0.5; // 50% da altura do PDF
+                                    let imgWidth = img.width;
+                                    let imgHeight = img.height;
+
+                                    // Redimensionar imagem mantendo a proporção
+                                    if (imgWidth > maxWidth || imgHeight > maxHeight) {
+                                        const widthRatio = maxWidth / imgWidth;
+                                        const heightRatio = maxHeight / imgHeight;
+                                        const ratio = Math.min(widthRatio, heightRatio);
+                                        imgWidth *= ratio;
+                                        imgHeight *= ratio;
+                                    }
+
+                                    pdf.addImage(imgData, 'JPEG', 10, yPosition, imgWidth, imgHeight);
+                                    yPosition += imgHeight + 10; // Incrementa a posição para a próxima imagem
+                                    resolve();
+                                };
+                            });
+                        }
                     }
 
                     // Salvar PDF
-                    pdf.save(`OrdemDeServico_${nome}.pdf`);
+                    pdf.save(`OrdemDeServico_${nome}${emissao}.pdf`);
                 } catch (error) {
-                    alert("Erro ao gerar o PDF: " + error.message);
+                    console.error("Erro ao gerar o PDF:", error);
+                    alert("Ocorreu um erro ao gerar o PDF. Verifique os dados e tente novamente.");
                 }
+            }
+
+            // Função para carregar imagens dos inputs
+            function carregarImagem(file) {
+                return new Promise((resolve, reject) => {
+                    const reader = new FileReader();
+                    reader.onload = (event) => resolve(event.target.result);
+                    reader.onerror = reject;
+                    reader.readAsDataURL(file);
+                });
             }
         </script>
     </main>
