--- a/os.html
+++ b/os.html
@@ -1,134 +1,203 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" data-bs-theme="light">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Gerador de Ordem de Serviço</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
-	<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gerador de Ordem de Serviço</title>
+    <script src="js/jspdf.umd.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <header>
-	<img src="logo_reciclar.png" alt="Logo Reciclar" height="120" style="align: center">
-	<h1 style="text-align: center;">Gerador de OS</h1>
+    <img src="images/logo_reciclar.png" alt="Logo Reciclar" height="120" style="display: block; margin: auto;">
+    <p class="display-4" style="text-align: center;">Gerador de OS</h1>
 </header>
 <body>
-	<nav>
-		<a href="os.html" title="home">Início</a>
-	</nav>
-	<main>
-		<form id="formulario">
-			<h3>Preencha os campos abaixo para gerar a Ordem de Serviço</h3>
-			<label for="nome">Nome do Contato:</label>
-			<input type="text" id="nome" placeholder="Digite seu nome" required>
-			<br>
+    <nav>
+        <a href="os.html" title="home">Início</a>
+    </nav>
+    <main>
+        <form id="formulario">
+            <h3>Preencha os campos abaixo para gerar a Ordem de Serviço</h3>
+            <label for="nome">Nome do Contato:</label>
+            <input type="text" id="nome" placeholder="Digite seu nome" maxlength="80" required>
+            <br>
 
-			<label for="telefone">Telefone/Whatsapp:</label>
-			<input type="text" id="telefone" placeholder="Digite o número do contato" required>
-			<br>
+            <label for="telefone">Telefone/Whatsapp:</label>
+            <input type="text" id="telefone" placeholder="Digite o número do contato" maxlength="20" required>
+            <br>
 
-			<label for="emissao">Data de Emissão:</label>
-			<input type="date" id="emissao" required>
-			<br>
+            <label for="emissao">Data de Emissão:</label>
+            <input type="date" id="emissao" required>
+            <br>
 
-			<label for="entrega">Data de Entrega:</label>
-			<input type="date" id="entrega" required>
-			<br>
+            <label for="entrega">Data de Entrega:</label>
+            <input type="date" id="entrega" required>
+            <br>
 
-			<label for="quantidade">Quantidade:</label>
-			<input type="text" id="quantidade" placeholder="Descreva a quantidade do pedido" required>
-			<br>
+            <label for="quantidade">Quantidade:</label>
+            <input type="text" id="quantidade" placeholder="Descreva a quantidade do pedido" maxlength="10" required>
+            <br>
 
-			<label for="acabamento">Acabamento:</label>
-			<input type="text" id="acabamento" placeholder="Descreva o acabamento das peças" required>
-			<br>
+            <label for="acabamento">Acabamento:</label>
+            <input type="text" id="acabamento" placeholder="Descreva o acabamento das peças" maxlength="150" required >
+            <br>
 
-			<label for="valor">Valor:</label>
-			<input type="text" id="valor" placeholder="Digite o valor do serviço" required>
-			<br>
+            <label for="valor">Valor:</label>
+            <input type="text" id="valor" placeholder="Digite o valor do serviço" maxlength="15" required>
+            <br>
 
-			<label for="pagamento">Status do Pagamento:</label>
-			<input type="text" id="pagamento" placeholder="Descreva o status do pagamento" required>
-			<br>
+            <label for="pagamento">Status do Pagamento:</label>
+            <input type="text" id="pagamento" placeholder="Descreva o status do pagamento" maxlength="100" required>
+            <br>
 
-			<label for="img">Imagem do item:</label>
-			<input type="file" id="img" multiple>
-			<br>
+            <label for="img">Imagem do item:</label>
+            <input type="file" id="img" multiple>
+            <br>
 
-			<label for="descricao">Descrição:</label>
-			<textarea id="descricao" rows="5" maxlength="150" placeholder="Digite uma descrição ou observação"></textarea>
-			<br>
+            <label for="descricao">Descrição:</label>
+            <textarea id="descricao" rows="5" maxlength="150" placeholder="Digite uma descrição ou observação"></textarea>
+            <br>
 
-			<button type="button" onclick="gerarPDF()">Gerar PDF</button>
-		</form>
+            <button type="button" onclick="gerarPDF()">Gerar PDF</button>
+        </form>
 
-		<script>
-    async function gerarPDF() {
-    const nome = document.getElementById('nome').value;
-    const telefone = document.getElementById('telefone').value;
-    const emissao = document.getElementById('emissao').value;
-    const entrega = document.getElementById('entrega').value;
-    const quantidade = document.getElementById('quantidade').value;
-    const acabamento = document.getElementById('acabamento').value;
-    const valor = document.getElementById('valor').value;
-    const pagamento = document.getElementById('pagamento').value;
-    const descricao = document.getElementById('descricao').value;
-    const imgInput = document.getElementById('img');
-
-    const { jsPDF } = window.jspdf;
-    const pdf = new jsPDF();
-
-    // Adicionar logo
-    const logo = new Image();
-    logo.src = "logo.jpg";
-    logo.onload = function () {
-        pdf.addImage(logo, 'JPG', 10, 10, 30, 30);
-
-        // Configuração do PDF
-        pdf.setFont("helvetica", "bold");
-        pdf.setFontSize(20);
-        pdf.text("Ordem de Serviço - Fundição Reciclar", 50, 20);
-
-        pdf.setFont("helvetica", "normal");
-        pdf.setFontSize(14);
-        pdf.text(`Nome: ${nome}`, 10, 50);
-        pdf.text(`Telefone: ${telefone}`, 120, 50);
-        pdf.text(`Data de Emissão: ${emissao}`, 10, 55);
-        pdf.text(`Data de Entrega: ${entrega}`, 120, 55);
-        pdf.text(`Quantidade: ${quantidade}`, 10, 60);
-        pdf.text(`Acabamento: ${acabamento}`, 10, 65);
-        pdf.text(`Valor: ${valor}`, 10, 70);
-        pdf.text(`Pagamento: ${pagamento}`, 120, 70);
-        pdf.text("Descrição:", 10, 80, { maxWidth: 160 });
-        pdf.text(descricao || "Nenhuma descrição fornecida.", 40, 80, { maxWidth: 150 });
-
-        // Adicionar imagens
-        if (imgInput.files.length > 0) {
-            let yPosition = 100; // Posição inicial para as imagens
-            for (const file of imgInput.files) {
-                const reader = new FileReader();
-                reader.onload = function (event) {
-                    const imgData = event.target.result;
-                    pdf.addImage(imgData, 'JPEG', 10, yPosition, 50, 50);
-                    yPosition += 60; // Incrementar a posição para a próxima imagem
-
-                    // Salvar PDF após a última imagem ser processada
-                    if (file === imgInput.files[imgInput.files.length - 1]) {
-                        pdf.save(`OrdemDeServico_${nome}.pdf`);
-                    }
-                };
-                reader.readAsDataURL(file);
+        <script>
+            async function carregarLogo(src) {
+                return new Promise((resolve, reject) => {
+                    const logo = new Image();
+                    logo.crossOrigin = 'Anonymous'; // Allow cross-origin requests
+                    logo.src = src;
+                    logo.onload = () => {
+                        const canvas = document.createElement('canvas');
+                        const ctx = canvas.getContext('2d');
+                        canvas.width = logo.width;
+                        canvas.height = logo.height;
+                        ctx.drawImage(logo, 0, 0);
+                        try {
+                            const dataURL = canvas.toDataURL('image/jpeg');
+                            resolve(dataURL);
+                        } catch (error) {
+                            console.error('Erro ao converter o canvas para dataURL:', error);
+                            reject(new Error('Erro ao converter o canvas para dataURL'));
+                        }
+                    };
+                    logo.onerror = (error) => {
+                        console.error('Erro ao carregar a imagem:', error, 'src:', src);
+                        reject(new Error('Erro ao carregar a imagem'));
+                    };
+                });
             }
-        } else {
-            pdf.save(`OrdemDeServico_${nome}.pdf`);
-        }
-    };
-}
 
-</script>
+            async function processarImagens(files) {
+                const promises = [];
+                let yPosition = 100; // Posição inicial
 
-	</main>
-	<footer>
-		<p>Desenvolvido por Igor e Auriandra.</p>
-	</footer>
+                for (const file of files) {
+                    const reader = new FileReader();
+                    const promise = new Promise((resolve, reject) => {
+                        reader.onload = (event) => {
+                            resolve({ data: event.target.result, y: yPosition });
+                            yPosition += 60; // Incrementa a posição para a próxima imagem
+                        };
+                        reader.onerror = (err) => reject(err);
+                    });
+                    reader.readAsDataURL(file);
+                    promises.push(promise);
+                }
+                return Promise.all(promises);
+            }
+
+            async function gerarPDF() {
+                const nome = document.getElementById('nome').value;
+                const telefone = document.getElementById('telefone').value;
+                const emissao = document.getElementById('emissao').value;
+                const entrega = document.getElementById('entrega').value;
+                const quantidade = document.getElementById('quantidade').value;
+                const acabamento = document.getElementById('acabamento').value;
+                const valor = document.getElementById('valor').value;
+                const pagamento = document.getElementById('pagamento').value;
+                const descricao = document.getElementById('descricao').value;
+                const imgInput = document.getElementById('img');
+
+                const { jsPDF } = window.jspdf;
+                const pdf = new jsPDF();
+
+                try {
+                    // Carregar logo de forma assíncrona
+                    const logo = await carregarLogo("images/logo.jpg");
+                    pdf.addImage(logo, 'JPG', 10, 10, 30, 30);
+
+                    // Adicionar texto ao PDF
+                    pdf.setFont("helvetica", "bold");
+                    pdf.setFontSize(20);
+                    pdf.text("Ordem de Serviço - Fundição Reciclar", 50, 20);
+
+                    pdf.setFont("helvetica", "normal");
+                    pdf.setFontSize(14);
+                    pdf.text(`Nome: ${nome}`, 10, 50);
+                    pdf.text(`Telefone: ${telefone}`, 120, 50);
+                    pdf.text(`Data de Emissão: ${emissao}`, 10, 55);
+                    pdf.text(`Data de Entrega: ${entrega}`, 120, 55);
+                    pdf.text(`Quantidade: ${quantidade}`, 10, 60);
+                    pdf.text(`Acabamento: ${acabamento}`, 10, 65);
+                    pdf.text(`Valor: ${valor}`, 10, 70);
+                    pdf.text(`Pagamento: ${pagamento}`, 120, 70);
+                    pdf.text("Descrição:", 10, 80, { maxWidth: 160 });
+                    pdf.text(descricao || "Nenhuma descrição fornecida.", 40, 80, { maxWidth: 150 });
+
+                    // Processar imagens adicionadas pelo usuário
+                    if (imgInput.files.length > 0) {
+                        let yPosition = 100; // Posição inicial para as imagens
+                        for (const file of imgInput.files) {
+                            const imgData = await carregarImagem(file); // Aguarda o carregamento da imagem
+                            const img = new Image();
+                            img.src = imgData;
+                            await new Promise((resolve) => {
+                                img.onload = () => {
+                                    const maxWidth = pdf.internal.pageSize.getWidth() * 0.5; // 50% da largura do PDF
+                                    const maxHeight = pdf.internal.pageSize.getHeight() * 0.5; // 50% da altura do PDF
+                                    let imgWidth = img.width;
+                                    let imgHeight = img.height;
+
+                                    // Redimensionar imagem mantendo a proporção
+                                    if (imgWidth > maxWidth || imgHeight > maxHeight) {
+                                        const widthRatio = maxWidth / imgWidth;
+                                        const heightRatio = maxHeight / imgHeight;
+                                        const ratio = Math.min(widthRatio, heightRatio);
+                                        imgWidth *= ratio;
+                                        imgHeight *= ratio;
+                                    }
+
+                                    pdf.addImage(imgData, 'JPEG', 10, yPosition, imgWidth, imgHeight);
+                                    yPosition += imgHeight + 10; // Incrementa a posição para a próxima imagem
+                                    resolve();
+                                };
+                            });
+                        }
+                    }
+
+                    // Salvar PDF
+                    pdf.save(`OrdemDeServico_${nome}${emissao}.pdf`);
+                } catch (error) {
+                    console.error("Erro ao gerar o PDF:", error);
+                    alert("Ocorreu um erro ao gerar o PDF. Verifique os dados e tente novamente.");
+                }
+            }
+
+            // Função para carregar imagens dos inputs
+            function carregarImagem(file) {
+                return new Promise((resolve, reject) => {
+                    const reader = new FileReader();
+                    reader.onload = (event) => resolve(event.target.result);
+                    reader.onerror = reject;
+                    reader.readAsDataURL(file);
+                });
+            }
+        </script>
+    </main>
+    <footer>
+        <p>Desenvolvido por Igor e Auriandra.</p>
+    </footer>
 </body>
 </html>
